* BUGFIX: remove extra space created in admin by bootstrap use

--- a/css/admin.css
+++ b/css/admin.css
@@ -675,3 +675,6 @@ dl dl {
   margin-top: 0.25em;
   margin-right: 0;
 }
+.update-core-php h2 {
+  margin: 0;
+}
